@@ -1,6 +1,5 @@
-tests/bin/
 tests/composer.lock
-tests/vendor/
-tests/behat.yml
+tests/behat/composer.lock
+tests/behat/vendor/
+tests/behat/behat.yml
 *.patch
-
