@@ -1,52 +1,126 @@
+# @file
+# .travis.yml - Drupal for Travis CI Integration
+#
+# Template provided by https://github.com/LionsAd/drupal_ti.
+#
+# Based for simpletest upon:
+#   https://github.com/sonnym/travis-ci-drupal-module-example
+
 language: php
 
+sudo: false
+
 php:
+  - 5.3
+  - 5.4
   - 5.5
   - 5.6
+  - 7
+  - hhvm
+
+matrix:
+  fast_finish: true
+  allow_failures:
+    - php: hhvm
+    - php: 5.3
 
 env:
   global:
-    - DATABASE='drupal'
-    - DB_USERNAME='root'
-    - DB_ENCODE='utf8'
-    - DOCROOT='/var/www'
+    # add composer's global bin directory to the path
+    # see: https://github.com/drush-ops/drush#install---composer
+    - PATH="$PATH:$HOME/.composer/vendor/bin"
+
+    # Configuration variables.
+    - DRUPAL_TI_MODULE_NAME="marketo_ma"
+    #- DRUPAL_TI_SIMPLETEST_GROUP="Marketo MA"
+
+    # Define runners and environment vars to include before and after the
+    # main runners / environment vars.
+    - DRUPAL_TI_SCRIPT_DIR_BEFORE="./drupal_ti/before"
+    - DRUPAL_TI_SCRIPT_DIR_AFTER="./drupal_ti/after"
+
+
+    # The environment to use, supported are: drupal-7, drupal-8
+    - DRUPAL_TI_ENVIRONMENT="drupal-7"
+
+    # The installation profile to use:
+    - DRUPAL_TI_INSTALL_PROFILE="standard"
+
+    # Drupal specific variables.
+    - DRUPAL_TI_DB="drupal_travis_db"
+    - DRUPAL_TI_DB_URL="mysql://root:@127.0.0.1/drupal_travis_db"
+    # Note: Do not add a trailing slash here.
+    - DRUPAL_TI_WEBSERVER_URL="http://127.0.0.1"
+    - DRUPAL_TI_WEBSERVER_PORT="8080"
+
+    # Simpletest specific commandline arguments, the DRUPAL_TI_SIMPLETEST_GROUP is appended at the end.
+    - DRUPAL_TI_SIMPLETEST_ARGS="--verbose --color --concurrency 4 --url $DRUPAL_TI_WEBSERVER_URL:$DRUPAL_TI_WEBSERVER_PORT"
+
+    # === Behat specific variables.
+    # This is relative to $TRAVIS_BUILD_DIR
+    - DRUPAL_TI_BEHAT_DIR="./tests/behat"
+    # These arguments are passed to the bin/behat command.
+    - DRUPAL_TI_BEHAT_ARGS="--tags=~live"
+    # Specify the filename of the behat.yml with the $DRUPAL_TI_DRUPAL_DIR variables.
+    - DRUPAL_TI_BEHAT_YML="behat.yml.dist"
+    # This is used to setup Xvfb.
+    - DRUPAL_TI_BEHAT_SCREENSIZE_COLOR="1280x1024x16"
+    # The version of selenium that should be used.
+    - DRUPAL_TI_BEHAT_SELENIUM_VERSION="2.48.2"
+    # Set DRUPAL_TI_BEHAT_DRIVER to "selenium" to use "firefox" or "chrome" here.
+    - DRUPAL_TI_BEHAT_DRIVER="phantomjs"
+    - DRUPAL_TI_BEHAT_BROWSER="firefox"
+
+    # PHPUnit specific commandline arguments.
+    - DRUPAL_TI_PHPUNIT_ARGS=""
+    # Specifying the phpunit-core src/ directory is useful when e.g. a vendor/
+    # directory is present in the module directory, which phpunit would then
+    # try to find tests in. This option is relative to $TRAVIS_BUILD_DIR.
+    #- DRUPAL_TI_PHPUNIT_CORE_SRC_DIRECTORY="./tests/src"
+
+    # Code coverage via coveralls.io
+    - DRUPAL_TI_COVERAGE="satooshi/php-coveralls:0.6.*"
+    # This needs to match your .coveralls.yml file.
+    - DRUPAL_TI_COVERAGE_FILE="build/logs/clover.xml"
+
+    # Debug options
+    #- DRUPAL_TI_DEBUG="-x -v"
+    # Set to "all" to output all files, set to e.g. "xvfb selenium" or "selenium",
+    # etc. to only output those channels.
+    #- DRUPAL_TI_DEBUG_FILE_OUTPUT="selenium xvfb webserver"
+
+  matrix:
+    # [[[ SELECT ANY OR MORE OPTIONS ]]]
+    #- DRUPAL_TI_RUNNERS="phpunit"
+    #- DRUPAL_TI_RUNNERS="simpletest"
+    - DRUPAL_TI_RUNNERS="behat"
+    #- DRUPAL_TI_RUNNERS="phpunit simpletest behat"
+    # Use phpunit-core to test modules with phpunit with Drupal 8 core.
+    #- DRUPAL_TI_RUNNERS="phpunit-core"
+    #- DRUPAL_TI_RUNNERS="behat-mma"
 
 mysql:
-  database: $DATABASE
-  username: $DB_USERNAME
-  encoding: $DB_ENCODE
+  database: drupal_travis_db
+  username: root
+  encoding: utf8
 
 before_install:
-  - sudo apt-get update > /dev/null
   - composer self-update
-  - pear channel-discover pear.drush.org
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+  - cd ./tests
+  - composer global require "lionsad/drupal_ti:1.*"
+  - drupal-ti before_install
 
 install:
-  - sudo apt-get install -y --force-yes apache2 libapache2-mod-php5 php5-curl php5-mysql php5-intl
-  - sudo a2enmod rewrite
-  - sudo cp -f tests/travis-ci-apache /etc/apache2/sites-available/default
-  - sudo service apache2 restart
-  - pear install drush/drush
-  - phpenv rehash
-  - cd $TRAVIS_BUILD_DIR
-  - export MODULE=$(basename $(pwd))
-  - export MODULE_DIR=$DOCROOT/sites/all/modules/$MODULE
-  - sudo chmod -R 777 /var
-  - drush dl drupal --destination=/var --drupal-project-rename=www --yes
-  - drush si --db-url="mysql://$DB_USERNAME@127.0.0.1/$DATABASE" -r $DOCROOT --yes
-  - ln -s $TRAVIS_BUILD_DIR $MODULE_DIR
-  - cd $TRAVIS_BUILD_DIR/..
-  - wget http://selenium-release.storage.googleapis.com/2.47/selenium-server-standalone-2.47.1.jar
-  - java -jar selenium-server-standalone-2.47.1.jar > /dev/null 2>&1 &
+  - drupal-ti install
 
 before_script:
-  - cd $MODULE_DIR/tests
-  - cp behat.yml.dist behat.yml
-  - composer install
-  - vendor/bin/behat features/travis-ci.feature
+  - drupal-ti before_script
 
 script:
-  - cd $MODULE_DIR/tests
-  - vendor/bin/behat --tags="~travis&&~live"
+  - drupal-ti script
+
+after_script:
+  - drupal-ti after_script
+
+notifications:
+  email: false
