@@ -1,0 +1,6 @@
+# .coveralls.yml configuration
+
+# for php-coveralls
+src_dir: ../src
+coverage_clover: build/logs/clover.xml
+json_path: build/logs/coveralls-upload.json
