@@ -1,0 +1,3 @@
+vendor/
+behat.yml
+composer.lock
