@@ -1,0 +1,5 @@
+{
+  "require": {
+    "drupal/drupal-extension": "~3.0"
+  }
+}
