@@ -1,5 +1,5 @@
 {
-  "require": {
-    "drupal/drupal-extension": "~3.0"
+  "require-dev": {
+    "phpunit/phpunit": "3.7.*"
   }
 }
